Improve ongoing pass calc
See merge request main/Sumatra!1851

sumatra-commit: b0024ac73b72ff54acac61df698912d9ed90e55a